--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -16,10 +16,6 @@ Proxy = select,Proxy Group, DIRECT
 Proxy Group = select,Auto test Group,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
 Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
-[URL Rewrite]
-^http://www.lianbijr.com/adPage/* _reject
-^http://www.google.com.* http://www.google.com.hk header
-
 [Host]
 se.itunes.apple.com = 42.81.5.81
 su.itunes.apple.com = 42.81.5.81
@@ -54,7 +50,25 @@ newvector.map.baidu.com = ::
 ulog.imap.baidu.com = ::
 newloc.map.n.shifen.com = ::
 
+[URL Rewrite]
+^http://www.google.com.* http://www.google.com.hk header
+^http://www.lianbijr.com/adPage/* _reject
+^http://api.mobile.youku.com/adv/* _reject
+^http://home.mobile.youku.com/laout/* _reject
+
 [Rule]
+#youku
+DOMAIN,ad.mobile.youku.com,REJECT
+#DOMAIN,hz.youku.com,REJECT
+#DOMAIN,stat.youku.com,REJECT
+#DOMAIN,e.stat.ykimg.com,REJECT
+#DOMAIN,p-log.ykimg.com,REJECT
+#DOMAIN,v.l.youku.com,REJECT
+#DOMAIN,ykatr.youku.com,REJECT
+#DOMAIN,hudong.pl.youku.com,REJECT
+#DOMAIN,msg.youku.com,REJECT
+#DOMAIN,p.l.youku.com,REJECT
+
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,112.17.1.87/32,REJECT,no-resolve
@@ -124,15 +138,7 @@ DOMAIN,api.adform.com,REJECT
 DOMAIN,e.apsalar.com,REJECT
 DOMAIN,syndication.streamads.yahoo.com,REJECT
 DOMAIN,ad.api.3g.youku.com,REJECT
-DOMAIN,hz.youku.com,REJECT
-DOMAIN,stat.youku.com,REJECT
-DOMAIN,e.stat.ykimg.com,REJECT
-DOMAIN,p-log.ykimg.com,REJECT
-DOMAIN,v.l.youku.com,REJECT
-DOMAIN,ykatr.youku.com,REJECT
-DOMAIN,hudong.pl.youku.com,REJECT
-DOMAIN,msg.youku.com,REJECT
-DOMAIN,p.l.youku.com,REJECT
+
 DOMAIN,ad.api.3g.tudou.com,REJECT
 DOMAIN,adcontrol.tudou.com,REJECT
 DOMAIN,adplay.tudou.com,REJECT
