--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -59,15 +59,15 @@ newloc.map.n.shifen.com = ::
 [Rule]
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
-#DOMAIN,hz.youku.com,REJECT
-#DOMAIN,stat.youku.com,REJECT
-#DOMAIN,e.stat.ykimg.com,REJECT
-#DOMAIN,p-log.ykimg.com,REJECT
-#DOMAIN,v.l.youku.com,REJECT
-#DOMAIN,ykatr.youku.com,REJECT
-#DOMAIN,hudong.pl.youku.com,REJECT
-#DOMAIN,msg.youku.com,REJECT
-#DOMAIN,p.l.youku.com,REJECT
+DOMAIN,hz.youku.com,REJECT
+DOMAIN,stat.youku.com,REJECT
+DOMAIN,e.stat.ykimg.com,REJECT
+DOMAIN,p-log.ykimg.com,REJECT
+DOMAIN,v.l.youku.com,REJECT
+DOMAIN,ykatr.youku.com,REJECT
+DOMAIN,hudong.pl.youku.com,REJECT
+DOMAIN,msg.youku.com,REJECT
+DOMAIN,p.l.youku.com,REJECT
 
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
