--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -53,21 +53,13 @@ newloc.map.n.shifen.com = ::
 [URL Rewrite]
 ^http://www.google.com.* http://www.google.com.hk header
 ^http://www.lianbijr.com/adPage/* _reject
+#youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
 
 [Rule]
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
-DOMAIN,hz.youku.com,REJECT
-DOMAIN,stat.youku.com,REJECT
-DOMAIN,e.stat.ykimg.com,REJECT
-DOMAIN,p-log.ykimg.com,REJECT
-DOMAIN,v.l.youku.com,REJECT
-DOMAIN,ykatr.youku.com,REJECT
-DOMAIN,hudong.pl.youku.com,REJECT
-DOMAIN,msg.youku.com,REJECT
-DOMAIN,p.l.youku.com,REJECT
 
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
