--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -16,51 +16,26 @@ Proxy = select,Proxy Group, DIRECT
 Proxy Group = select,Auto test Group,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
 Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
-[Host]
-se.itunes.apple.com = 42.81.5.81
-su.itunes.apple.com = 42.81.5.81
-upp.itunes.apple.com = 42.81.5.81
-play.itunes.apple.com = 42.81.5.81
-client-api.itunes.apple.com = 42.81.5.81
-itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 184.87.97.50
-search.itunes.apple.com = 184.87.97.50
-radio.itunes.apple.com = 184.87.100.246
-radio-services.itunes.apple.com = 184.87.100.246
-radio-activity.itunes.apple.com = 184.87.100.246
-aod.itunes.apple.com = 117.23.2.78
-mvod.itunes.apple.com = 117.23.2.78
-iosapps.itunes.apple.com = 117.23.2.78
-osxapps.itunes.apple.com = 117.23.2.78
-streamingaudio.itunes.apple.com = 117.23.2.78
-
-api.map.baidu.com = 0.0.0.0
-ps.map.baidu.com = 0.0.0.0
-sv.map.baidu.com = 0.0.0.0
-offnavi.map.baidu.com = 0.0.0.0
-newvector.map.baidu.com = 0.0.0.0
-ulog.imap.baidu.com = 0.0.0.0
-newloc.map.n.shifen.com = 0.0.0.0
-api.map.baidu.com = ::
-ps.map.baidu.com = ::
-sv.map.baidu.com = ::
-offnavi.map.baidu.com = ::
-newvector.map.baidu.com = ::
-ulog.imap.baidu.com = ::
-newloc.map.n.shifen.com = ::
-
 [URL Rewrite]
+#google
 ^http://www.google.com.* http://www.google.com.hk header
+#lianbi
 ^http://www.lianbijr.com/adPage/* _reject
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
+#iqiyi
+^http://iface.iqiyi.com/api/getNewAdInfo* _reject
+^http://pic*.qiyipic.com/common/* _reject
+#sohu
+^http://photocdn.sohu.com/tvmobilemvms/* _reject
 
 [Rule]
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
-
+#iqiyi
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
+DOMAIN-SUFFIX,qiyi.com,DIRECT
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
 IP-CIDR,112.17.1.87/32,REJECT,no-resolve
@@ -93,7 +68,43 @@ IP-CIDR,91.108.4.0/22,Proxy,no-resolve
 IP-CIDR,91.108.56.0/22,Proxy,no-resolve
 IP-CIDR,109.239.140.0/24,Proxy,no-resolve
 IP-CIDR,149.154.160.0/20,Proxy,no-resolve
-
+#hunantv
+DOMAIN,x.da.hunantv.com,REJECT
+DOMAIN,y.da.hunantv.com,REJECT
+#qq
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,omgmta.qq.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,qqvideo.tc.qq.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,v.gdt.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+#sina weibo
+DOMAIN,biz.weibo.com,REJECT
+DOMAIN,s.alitui.weibo.com,REJECT
+DOMAIN,zymo.mps.weibo.com,REJECT
+DOMAIN,game.weibo.cn,REJECT
+DOMAIN,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN,m.game.weibo.cn,REJECT
+DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+DOMAIN-SUFFIX,weibo.cn,DIRECT
+DOMAIN-SUFFIX,sina.cn,DIRECT
+DOMAIN-SUFFIX,weibo.com,DIRECT
+#sohu
+DOMAIN,mmg.aty.sohu.com,REJECT
+DOMAIN-SUFFIX,aty.sohu.com,REJECT
+DOMAIN-SUFFIX,sohu.com,DIRECT
+##
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,cdn-apple.com,DIRECT
 DOMAIN-SUFFIX,mzstatic.com,DIRECT
@@ -129,8 +140,6 @@ DOMAIN,api.tapstream.com,REJECT
 DOMAIN,api.adform.com,REJECT
 DOMAIN,e.apsalar.com,REJECT
 DOMAIN,syndication.streamads.yahoo.com,REJECT
-DOMAIN,ad.api.3g.youku.com,REJECT
-
 DOMAIN,ad.api.3g.tudou.com,REJECT
 DOMAIN,adcontrol.tudou.com,REJECT
 DOMAIN,adplay.tudou.com,REJECT
@@ -160,7 +169,6 @@ DOMAIN,static.ku6.com,REJECT
 DOMAIN,static.diditaxi.com.cn,REJECT
 DOMAIN,data.vod.itc.cn,REJECT
 DOMAIN,imp.optaim.com,REJECT
-DOMAIN,mmg.aty.sohu.com,REJECT
 DOMAIN,vsohu.admaster.com.cn,REJECT
 DOMAIN,corp.meitu.com,REJECT
 DOMAIN,gg.meitu.com,REJECT
@@ -170,12 +178,6 @@ DOMAIN,xiuxiu.android.dl.meitu.com,REJECT
 DOMAIN,xiuxiu.mobile.meitudata.com,REJECT
 DOMAIN,a.koudai.com,REJECT
 DOMAIN,push.mobile.meituan.com,REJECT
-DOMAIN,lives.l.qq.com,REJECT
-DOMAIN,omgmta.qq.com,REJECT
-DOMAIN,pingjs.qq.com,REJECT
-DOMAIN,pingma.qq.com,REJECT
-DOMAIN,tajs.qq.com,REJECT
-DOMAIN,tcss.qq.com,REJECT
 DOMAIN,dsp.youdao.com,REJECT
 DOMAIN,g.163.com,REJECT
 DOMAIN,g1.163.com,REJECT
@@ -200,21 +202,12 @@ DOMAIN-SUFFIX,aoodoo.feng.com,REJECT
 DOMAIN,api.newad.ifeng.com,REJECT
 DOMAIN,duiba.com.cn,REJECT
 DOMAIN,dui88.com,REJECT
-DOMAIN,mp4.res.hunantv.com,REJECT
-DOMAIN,p2.hunantv.com,REJECT
-DOMAIN,x.da.hunantv.com,REJECT
 DOMAIN,ad.12306.cn,REJECT
 DOMAIN,e.domob.com.cn,REJECT
 DOMAIN,e.domob.cn,REJECT
 DOMAIN,sm.domobcdn.com,REJECT
 DOMAIN,erebor.douban.com,REJECT
-DOMAIN,msg.video.qiyi.com,REJECT
-DOMAIN,msg2.video.qiyi.com,REJECT
 DOMAIN,msg.71.am,REJECT
-DOMAIN,meta.video.qiyi.com,REJECT
-DOMAIN,data.video.qiyi.com,REJECT
-DOMAIN,api.cupid.iqiyi.com,REJECT
-DOMAIN,paopao.iqiyi.com,REJECT
 DOMAIN,cbjs.baidu.com,REJECT
 DOMAIN,cpro.baidu.com,REJECT
 DOMAIN,eclick.baidu.com,REJECT
@@ -235,19 +228,11 @@ DOMAIN,res.cocounion.com,REJECT
 DOMAIN,ads.ookla.com,REJECT
 DOMAIN,cdn.ads.ookla.com,REJECT
 DOMAIN,union.m.jd.com,REJECT
-DOMAIN,qqvideo.tc.qq.com,REJECT
 DOMAIN,ad.toutiao.com,REJECT
 DOMAIN,gma.alicdn.com,REJECT
 DOMAIN,ads.wasu.tv,REJECT
 DOMAIN,afp.wasu.cn,REJECT
 DOMAIN,afpcreative.wasu.cn,REJECT
-DOMAIN,biz.weibo.com,REJECT
-DOMAIN,s.alitui.weibo.com,REJECT
-DOMAIN,zymo.mps.weibo.com,REJECT
-DOMAIN,game.weibo.cn,REJECT
-DOMAIN,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN,m.game.weibo.cn,REJECT
-DOMAIN,mi.gdt.qq.com,REJECT
 DOMAIN,bj.imp.voiceads.cn,REJECT
 DOMAIN,m.madthumbs.com,REJECT
 DOMAIN,adm0.autoimg.cn,REJECT
@@ -303,7 +288,6 @@ DOMAIN,api.instabug.com,REJECT
 DOMAIN,adlog.flurry.com,REJECT
 DOMAIN,ads.flurry.com,REJECT
 DOMAIN,fonts.googleapis.com,REJECT
-DOMAIN,v.gdt.qq.com,REJECT
 DOMAIN,sd.domob.cn,REJECT
 DOMAIN,pub.funshion.com,REJECT
 DOMAIN,adm.funshion.com,REJECT
@@ -336,9 +320,6 @@ DOMAIN,sddnserror7.wo.com.cn,REJECT
 DOMAIN,sddnserror9.wo.com.cn,REJECT
 DOMAIN,daohang.114so.cn,REJECT
 DOMAIN,www.114so.cn,REJECT
-DOMAIN,cm.l.qq.com,REJECT
-DOMAIN,btrace.video.qq.com,REJECT
-DOMAIN,rcgi.video.qq.com,REJECT
 DOMAIN,adjust.com,REJECT
 DOMAIN,adjust.io,REJECT
 DOMAIN,pd.dopa.com.cn,REJECT
@@ -426,19 +407,11 @@ DOMAIN-SUFFIX,zhiziyun.com,REJECT
 DOMAIN-SUFFIX,segment.com,REJECT
 DOMAIN-SUFFIX,admaster.com.cn,REJECT
 DOMAIN-SUFFIX,amazon-adsystem.com,REJECT
-DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN-SUFFIX,simaba.taobao.com,REJECT
-DOMAIN-SUFFIX,cupid.iqiyi.com,REJECT
-DOMAIN-SUFFIX,afp.qiyi.com,REJECT
-DOMAIN-SUFFIX,ckm.iqiyi.com,REJECT
 DOMAIN-SUFFIX,de.as.pptv.com,REJECT
 DOMAIN-SUFFIX,jp.as.pptv.com,REJECT
 DOMAIN-SUFFIX,ht55.cn,REJECT
-DOMAIN-SUFFIX,aty.sohu.com,REJECT
 DOMAIN-SUFFIX,statcounter.com,REJECT
-DOMAIN-SUFFIX,beacon.qq.com,REJECT
-DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
-DOMAIN-SUFFIX,report.qq.com,REJECT
 DOMAIN-SUFFIX,union.youdao.com,REJECT
 DOMAIN-SUFFIX,kukuplay.com,REJECT
 DOMAIN-SUFFIX,fastapi.net,REJECT
@@ -450,9 +423,6 @@ DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,g.uusee.com,REJECT
 DOMAIN-SUFFIX,traffic.uusee.com,REJECT
 DOMAIN-SUFFIX,static.g.ppstream.com,REJECT
-DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
-DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
-DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
 DOMAIN-SUFFIX,2mdn.net,REJECT
 DOMAIN-SUFFIX,doubleclick.net,REJECT
 DOMAIN-SUFFIX,googleadservices.com,REJECT
@@ -515,8 +485,6 @@ DOMAIN-SUFFIX,edu.cn,DIRECT
 DOMAIN-SUFFIX,org.cn,DIRECT
 DOMAIN-SUFFIX,net.cn,DIRECT
 DOMAIN-SUFFIX,gov.cn,DIRECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,sina.cn,DIRECT
 DOMAIN-SUFFIX,tbcdn.cn,DIRECT
 DOMAIN-SUFFIX,sinajs.cn,DIRECT
 DOMAIN-SUFFIX,amazon.cn,DIRECT
@@ -720,7 +688,6 @@ DOMAIN-SUFFIX,iciba.com,DIRECT
 DOMAIN-SUFFIX,idqqimg.com,DIRECT
 DOMAIN-SUFFIX,ifanr.com,DIRECT
 DOMAIN-SUFFIX,ijinshan.com,DIRECT
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,it168.com,DIRECT
 DOMAIN-SUFFIX,itcpn.net,DIRECT
 DOMAIN-SUFFIX,iteye.com,DIRECT
@@ -799,7 +766,6 @@ DOMAIN-SUFFIX,qingdaonews.com,DIRECT
 DOMAIN-SUFFIX,qiniu.com,DIRECT
 DOMAIN-SUFFIX,qiniucdn.com,DIRECT
 DOMAIN-SUFFIX,qiushibaike.com,DIRECT
-DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyipic.com,DIRECT
 DOMAIN-SUFFIX,qqmail.com,DIRECT
 DOMAIN-SUFFIX,qstatic.com,DIRECT
@@ -819,7 +785,6 @@ DOMAIN-SUFFIX,sinajs.com,DIRECT
 DOMAIN-SUFFIX,skycn.com,DIRECT
 DOMAIN-SUFFIX,smzdm.com,DIRECT
 DOMAIN-SUFFIX,sogou.com,DIRECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
 DOMAIN-SUFFIX,soku.com,DIRECT
 DOMAIN-SUFFIX,solidot.org,DIRECT
 DOMAIN-SUFFIX,soso.com,DIRECT
@@ -866,7 +831,6 @@ DOMAIN-SUFFIX,vcimg.com,DIRECT
 DOMAIN-SUFFIX,verycd.com,DIRECT
 DOMAIN-SUFFIX,wandoujia.com,DIRECT
 DOMAIN-SUFFIX,wdjimg.com,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
 DOMAIN-SUFFIX,weiphone.com,DIRECT
 DOMAIN-SUFFIX,weiyun.com,DIRECT
 DOMAIN-SUFFIX,west263.com,DIRECT
@@ -4121,6 +4085,40 @@ IP-CIDR,172.0.0.0/8,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
 FINAL,Proxy
+
+[Host]
+se.itunes.apple.com = 42.81.5.81
+su.itunes.apple.com = 42.81.5.81
+upp.itunes.apple.com = 42.81.5.81
+play.itunes.apple.com = 42.81.5.81
+client-api.itunes.apple.com = 42.81.5.81
+itunes.apple.com = 42.81.20.29
+init.itunes.apple.com = 42.81.20.29
+init.itunes.apple.com = 184.87.97.50
+search.itunes.apple.com = 184.87.97.50
+radio.itunes.apple.com = 184.87.100.246
+radio-services.itunes.apple.com = 184.87.100.246
+radio-activity.itunes.apple.com = 184.87.100.246
+aod.itunes.apple.com = 117.23.2.78
+mvod.itunes.apple.com = 117.23.2.78
+iosapps.itunes.apple.com = 117.23.2.78
+osxapps.itunes.apple.com = 117.23.2.78
+streamingaudio.itunes.apple.com = 117.23.2.78
+
+api.map.baidu.com = 0.0.0.0
+ps.map.baidu.com = 0.0.0.0
+sv.map.baidu.com = 0.0.0.0
+offnavi.map.baidu.com = 0.0.0.0
+newvector.map.baidu.com = 0.0.0.0
+ulog.imap.baidu.com = 0.0.0.0
+newloc.map.n.shifen.com = 0.0.0.0
+api.map.baidu.com = ::
+ps.map.baidu.com = ::
+sv.map.baidu.com = ::
+offnavi.map.baidu.com = ::
+newvector.map.baidu.com = ::
+ulog.imap.baidu.com = ::
+newloc.map.n.shifen.com = ::
 
 [General]
 bypass-system = 1
