--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -26,7 +26,7 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 ^http://home.mobile.youku.com/laout/* _reject
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
-^http://pic*.qiyipic.com/common/* _reject
+^http://pic?([0-9]).qiyipic.com/common/* _reject
 #sohu
 ^http://photocdn.sohu.com/tvmobilemvms/* _reject
 
@@ -38,36 +38,8 @@ DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,112.17.1.87/32,REJECT,no-resolve
-IP-CIDR,112.17.1.193/32,REJECT,no-resolve
-IP-CIDR,112.17.1.194/32,REJECT,no-resolve
-IP-CIDR,112.17.1.195/32,REJECT,no-resolve
-IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-IP-CIDR,101.227.12.0/23,REJECT,no-resolve
-IP-CIDR,101.227.14.0/24,REJECT,no-resolve
-IP-CIDR,101.227.119.0/24,REJECT,no-resolve
-IP-CIDR,101.227.200.0/24,REJECT,no-resolve
-IP-CIDR,111.63.135.0/24,REJECT,no-resolve
-IP-CIDR,111.206.22.0/24,REJECT,no-resolve
-IP-CIDR,111.206.13.60/30,REJECT,no-resolve
-IP-CIDR,111.206.13.64/28,REJECT,no-resolve
-IP-CIDR,111.206.13.80/32,REJECT,no-resolve
-IP-CIDR,111.206.13.250/31,REJECT,no-resolve
-IP-CIDR,116.206.22.7/32,REJECT,no-resolve
-IP-CIDR,113.207.57.24/32,REJECT,no-resolve
-IP-CIDR,119.188.13.0/24,REJECT,no-resolve
-IP-CIDR,121.251.255.0/24,REJECT,no-resolve
-IP-CIDR,123.125.111.0/24,REJECT,no-resolve
-IP-CIDR,123.125.117.0/24,REJECT,no-resolve
-IP-CIDR,123.125.118.0/24,REJECT,no-resolve
-IP-CIDR,182.254.10.0/24,REJECT,no-resolve
-IP-CIDR,211.137.132.89/32,REJECT,no-resolve
-IP-CIDR,221.179.183.0/24,REJECT,no-resolve
-IP-CIDR,221.179.191.0/24,REJECT,no-resolve
-IP-CIDR,91.108.4.0/22,Proxy,no-resolve
-IP-CIDR,91.108.56.0/22,Proxy,no-resolve
-IP-CIDR,109.239.140.0/24,Proxy,no-resolve
-IP-CIDR,149.154.160.0/20,Proxy,no-resolve
+IP-CIDR,112.17.1.0/24,REJECT,no-resolve
+
 #hunantv
 DOMAIN,x.da.hunantv.com,REJECT
 DOMAIN,y.da.hunantv.com,REJECT
