--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -29,6 +29,12 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 ^http://pic?([0-9]).qiyipic.com/common/* _reject
 #sohu
 ^http://photocdn.sohu.com/tvmobilemvms/* _reject
+#sina
+^http://dp.im.weibo.cn/entrance _reject
+^http://wbapp.mobile.sina.cn/wbapplua/* _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
 
 [Rule]
 #youku
