--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -26,7 +26,7 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 ^http://home.mobile.youku.com/laout/* _reject
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
-^http://pic?([0-9]).qiyipic.com/common/* _reject
+^http://pic?([0-9]).qiyipic.com/common/?([0-9]{8})/?([a-z0-9]{32}).jpg _reject
 #sohu
 ^http://photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
@@ -40,11 +40,17 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
 #iqiyi
-DOMAIN-SUFFIX,iqiyi.com,DIRECT
 DOMAIN-SUFFIX,qiyi.com,DIRECT
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
 IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,112.17.1.0/24,REJECT,no-resolve
+IP-CIDR,112.17.1.188/32,REJECT,no-resolve
+IP-CIDR,112.17.1.189/32,REJECT,no-resolve
+IP-CIDR,112.17.1.192/32,REJECT,no-resolve
+IP-CIDR,112.17.1.193/32,REJECT,no-resolve
+IP-CIDR,112.17.1.194/32,REJECT,no-resolve
+IP-CIDR,112.17.1.195/32,REJECT,no-resolve
+IP-CIDR,112.17.1.196/32,REJECT,no-resolve
 #hunantv
 DOMAIN,x.da.hunantv.com,REJECT
 DOMAIN,y.da.hunantv.com,REJECT
@@ -65,6 +71,7 @@ DOMAIN-SUFFIX,beacon.qq.com,REJECT
 DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
 DOMAIN-SUFFIX,report.qq.com,REJECT
 #sina weibo
+IP-CIDR,111.13.87.0/8,REJECT,no-resolve
 DOMAIN,biz.weibo.com,REJECT
 DOMAIN,s.alitui.weibo.com,REJECT
 DOMAIN,zymo.mps.weibo.com,REJECT
@@ -4064,24 +4071,6 @@ GEOIP,CN,DIRECT
 FINAL,Proxy
 
 [Host]
-se.itunes.apple.com = 42.81.5.81
-su.itunes.apple.com = 42.81.5.81
-upp.itunes.apple.com = 42.81.5.81
-play.itunes.apple.com = 42.81.5.81
-client-api.itunes.apple.com = 42.81.5.81
-itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 184.87.97.50
-search.itunes.apple.com = 184.87.97.50
-radio.itunes.apple.com = 184.87.100.246
-radio-services.itunes.apple.com = 184.87.100.246
-radio-activity.itunes.apple.com = 184.87.100.246
-aod.itunes.apple.com = 117.23.2.78
-mvod.itunes.apple.com = 117.23.2.78
-iosapps.itunes.apple.com = 117.23.2.78
-osxapps.itunes.apple.com = 117.23.2.78
-streamingaudio.itunes.apple.com = 117.23.2.78
-
 api.map.baidu.com = 0.0.0.0
 ps.map.baidu.com = 0.0.0.0
 sv.map.baidu.com = 0.0.0.0
