--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -42,6 +42,7 @@ DOMAIN,ad.mobile.youku.com,REJECT
 #iqiyi
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
+IP-CIDR,112.17.1.187/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
 IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 #hunantv
