--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -44,6 +44,11 @@ DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 IP-CIDR,112.17.6.140/32,REJECT,no-resolve
 IP-CIDR,112.17.6.145/32,REJECT,no-resolve
+IP-CIDR,112.17.1.70/32,REJECT,no-resolve
+IP-CIDR,112.17.1.73/32,REJECT,no-resolve
+IP-CIDR,112.17.1.188/32,REJECT,no-resolve
+IP-CIDR,112.17.1.189/32,REJECT,no-resolve
+IP-CIDR,112.17.1.190/32,REJECT,no-resolve
 IP-CIDR,112.17.1.191/32,REJECT,no-resolve
 IP-CIDR,112.17.1.192/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
