--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -75,8 +75,7 @@ DOMAIN-SUFFIX,beacon.qq.com,REJECT
 DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
 DOMAIN-SUFFIX,report.qq.com,REJECT
 #sina weibo
-IP-CIDR,111.13.87.0/24,REJECT,no-resolve
-IP-CIDR,111.13.88.0/24,REJECT,no-resolve
+DOMAIN,adshxgc.ut.taobao.com,REJECT
 DOMAIN,biz.weibo.com,REJECT
 DOMAIN,s.alitui.weibo.com,REJECT
 DOMAIN,zymo.mps.weibo.com,REJECT
