--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -39,7 +39,10 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 [Rule]
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
-DOMAIN,api.3g.youku.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+DOMAIN,adp.atm.youku.com,REJECT
+DOMAIN,msg.youku.com,REJECT
+DOMAIN,p.l.youku.com,REJECT
 #iqiyi
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
