--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -38,8 +38,16 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 
 [Rule]
 #youku
-DOMAIN,ad.mobile.youku.com,REJECT
 IP-CIDR,218.60.69.240/32,REJECT,no-resolve
+DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+DOMAIN,hz.youku.com,REJECT
+DOMAIN,stat.youku.com,REJECT
+DOMAIN,v.l.youku.com,REJECT
+DOMAIN,ykatr.youku.com,REJECT
+DOMAIN,hudong.pl.youku.com,REJECT
+DOMAIN,msg.youku.com,REJECT
+DOMAIN,p.l.youku.com,REJECT
 #iqiyi
 DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
