--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -41,6 +41,7 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 IP-CIDR,218.60.69.240/32,REJECT,no-resolve
 IP-CIDR,183.213.0.0/24,REJECT,no-resolve
 DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,adp.atm.com,REJECT
 DOMAIN,statis.mobile.youku.com,REJECT
 DOMAIN,statis.api.3g.youku.com,REJECT
 DOMAIN,ad.api.3g.youku.com,REJECT
