--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -24,6 +24,8 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
+^http://i-play.mobile.youku.com/common/v5/play* https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/Null.php header
+^http://d.m6.cms.mobile.youku.com/player/domain_name* https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/Null.php header
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
 ^http://pic?([0-9]).qiyipic.com/common/?([0-9]{8})/?([a-z0-9]{32}).jpg _reject
@@ -35,6 +37,7 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 ^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
 ^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+
 
 [Rule]
 #youku
