--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -24,9 +24,9 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
-^http://i-play.mobile.youku.com/common/v5/play? https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/Null.php header
-^http://d.m6.cms.mobile.youku.com/player/domain_name? https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/Null.php header
-^https://raw.githubusercontent.com/common/v5/play https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/Null.php header
+^http://i-play.mobile.youku.com/common/v5/play? https://www.chiphell.com/forum.php header
+^http://d.m6.cms.mobile.youku.com/player/domain_name? https://www.chiphell.com/forum.php header
+^https://www.chiphell.com/common/v5/play https://www.chiphell.com/forum.php header
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
 ^http://pic?([0-9]).qiyipic.com/common/?([0-9]{8})/?([a-z0-9]{32}).jpg _reject
