--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -24,6 +24,7 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
+#youku by lhie1x
 ^http://i-play.mobile.youku.com/common/v5/play? http://1.lhie1x.applinzi.com/Youku.php header
 ^http://d.m6.cms.mobile.youku.com/player/domain_name? http://1.lhie1x.applinzi.com/Youku.php header
 ^http://1.lhie1x.applinzi.com/common/v5/play http://1.lhie1x.applinzi.com/Youku.php header
@@ -41,8 +42,6 @@ Auto test Group = url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo
 
 [Rule]
 #youku
-IP-CIDR,218.60.69.240/32,REJECT,no-resolve
-IP-CIDR,183.213.0.0/24,REJECT,no-resolve
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,ad.api.3g.youku.com,REJECT
 #iqiyi
