--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -31,7 +31,7 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 ^http://1.lhie1x.applinzi.com/common/v5/play http://1.lhie1x.applinzi.com/Youku.php header
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
-^http://pic?([0-9]).qiyipic.com/common/?([0-9]{8})/?([a-z0-9]{32}).jpg _reject
+^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
 #sohu
 ^http://photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
@@ -40,8 +40,12 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 ^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
 ^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+#lemon
+^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
 
 [Rule]
+#lemon
+DOMAIN-SUFFIX,adapi.starschina.com,REJECT
 #youku
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,ad.api.3g.youku.com,REJECT
