--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -42,6 +42,7 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 ^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
 ^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^http://api.lemon95.com/V2/Media/Videos/* _reject
 
 [Rule]
 #lemon
