--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -55,6 +55,7 @@ DOMAIN-SUFFIX,qiyi.com,DIRECT
 DOMAIN-SUFFIX,iqiyi.com,DIRECT
 IP-CIDR,112.17.6.140/32,REJECT,no-resolve
 IP-CIDR,112.17.6.145/32,REJECT,no-resolve
+IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.70/32,REJECT,no-resolve
 IP-CIDR,112.17.1.73/32,REJECT,no-resolve
 IP-CIDR,112.17.1.188/32,REJECT,no-resolve
