--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -39,7 +39,7 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 ^http://wbapp.mobile.sina.cn/wbapplua/* _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
 ^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
