--- a/File/Shadowrocket/zCloud.conf
+++ b/File/Shadowrocket/zCloud.conf
@@ -37,6 +37,7 @@ DOMAIN-SUFFIX,iqiyi.com,DIRECT
 IP-CIDR,112.17.1.75/32,REJECT,no-resolve
 IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
+IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 IP-CIDR,112.17.1.195/32,REJECT,no-resolve
 IP-CIDR,112.17.1.196/32,REJECT,no-resolve
 #hunantv
