--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -5,24 +5,6 @@ bypass-system = true
 loglevel = notify
 
 [Host]
-se.itunes.apple.com = 42.81.5.81
-su.itunes.apple.com = 42.81.5.81
-upp.itunes.apple.com = 42.81.5.81
-play.itunes.apple.com = 42.81.5.81
-client-api.itunes.apple.com = 42.81.5.81
-itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 184.87.97.50
-search.itunes.apple.com = 184.87.97.50
-radio.itunes.apple.com = 184.87.100.246
-radio-services.itunes.apple.com = 184.87.100.246
-radio-activity.itunes.apple.com = 184.87.100.246
-aod.itunes.apple.com = 117.23.2.78
-mvod.itunes.apple.com = 117.23.2.78
-iosapps.itunes.apple.com = 117.23.2.78
-osxapps.itunes.apple.com = 117.23.2.78
-streamingaudio.itunes.apple.com = 117.23.2.78
-
 api.map.baidu.com = 0.0.0.0
 ps.map.baidu.com = 0.0.0.0
 sv.map.baidu.com = 0.0.0.0
@@ -39,8 +21,31 @@ ulog.imap.baidu.com = ::
 newloc.map.n.shifen.com = ::
 
 [URL Rewrite]
-^http://www.lianbijr.com/adPage/* _reject
+#google
 ^http://www.google.com.* http://www.google.com.hk header
+#lianbi
+^http://www.lianbijr.com/adPage/* _reject
+#youku
+^http://api.mobile.youku.com/adv/* _reject
+^http://home.mobile.youku.com/laout/* _reject
+#youku by lhie1x
+^http://i-play.mobile.youku.com/common/v5/play? http://1.lhie1x.applinzi.com/Youku.php header
+^http://d.m6.cms.mobile.youku.com/player/domain_name? http://1.lhie1x.applinzi.com/Youku.php header
+^http://1.lhie1x.applinzi.com/common/v5/play http://1.lhie1x.applinzi.com/Youku.php header
+#iqiyi
+^http://iface.iqiyi.com/api/getNewAdInfo* _reject
+^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
+#sohu
+^http://photocdn.sohu.com/tvmobilemvms/* _reject
+#sina
+^http://dp.im.weibo.cn/entrance _reject
+^http://wbapp.mobile.sina.cn/wbapplua/* _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+#lemon
+^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 
 [Rule]
 IP-CIDR,101.227.200.11/32,REJECT,no-resolve
