--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -48,42 +48,61 @@ newloc.map.n.shifen.com = ::
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 
 [Rule]
-IP-CIDR,101.227.200.11/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,112.17.1.87/32,REJECT,no-resolve
+#lemon
+DOMAIN-SUFFIX,adapi.starschina.com,REJECT
+#youku
+DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+#iqiyi
+DOMAIN-SUFFIX,qiyi.com,DIRECT
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
+IP-CIDR,112.17.1.75/32,REJECT,no-resolve
+IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
 IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 IP-CIDR,112.17.1.195/32,REJECT,no-resolve
 IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-IP-CIDR,101.227.12.0/23,REJECT,no-resolve
-IP-CIDR,101.227.14.0/24,REJECT,no-resolve
-IP-CIDR,101.227.119.0/24,REJECT,no-resolve
-IP-CIDR,101.227.200.0/24,REJECT,no-resolve
-IP-CIDR,111.63.135.0/24,REJECT,no-resolve
-IP-CIDR,111.206.22.0/24,REJECT,no-resolve
-IP-CIDR,111.206.13.60/30,REJECT,no-resolve
-IP-CIDR,111.206.13.64/28,REJECT,no-resolve
-IP-CIDR,111.206.13.80/32,REJECT,no-resolve
-IP-CIDR,111.206.13.250/31,REJECT,no-resolve
-IP-CIDR,116.206.22.7/32,REJECT,no-resolve
-IP-CIDR,113.207.57.24/32,REJECT,no-resolve
-IP-CIDR,119.188.13.0/24,REJECT,no-resolve
-IP-CIDR,121.251.255.0/24,REJECT,no-resolve
-IP-CIDR,123.125.111.0/24,REJECT,no-resolve
-IP-CIDR,123.125.117.0/24,REJECT,no-resolve
-IP-CIDR,123.125.118.0/24,REJECT,no-resolve
-IP-CIDR,182.254.10.0/24,REJECT,no-resolve
-IP-CIDR,211.137.132.89/32,REJECT,no-resolve
-IP-CIDR,221.179.183.0/24,REJECT,no-resolve
-IP-CIDR,221.179.191.0/24,REJECT,no-resolve
-IP-CIDR,91.108.4.0/22,Proxy,no-resolve
-IP-CIDR,91.108.56.0/22,Proxy,no-resolve
-IP-CIDR,109.239.140.0/24,Proxy,no-resolve
-IP-CIDR,149.154.160.0/20,Proxy,no-resolve
-
+#hunantv
+DOMAIN,x.da.hunantv.com,REJECT
+DOMAIN,y.da.hunantv.com,REJECT
+#qq
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,omgmta.qq.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,qqvideo.tc.qq.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,v.gdt.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+#sina weibo
+DOMAIN,adshxgc.ut.taobao.com,REJECT
+DOMAIN,biz.weibo.com,REJECT
+DOMAIN,s.alitui.weibo.com,REJECT
+DOMAIN,zymo.mps.weibo.com,REJECT
+DOMAIN,game.weibo.cn,REJECT
+DOMAIN,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN,m.game.weibo.cn,REJECT
+DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+DOMAIN-SUFFIX,weibo.cn,DIRECT
+DOMAIN-SUFFIX,sina.cn,DIRECT
+DOMAIN-SUFFIX,weibo.com,DIRECT
+#sohu
+DOMAIN,mmg.aty.sohu.com,REJECT
+DOMAIN-SUFFIX,aty.sohu.com,REJECT
+DOMAIN-SUFFIX,sohu.com,DIRECT
+#instagram
 DOMAIN-SUFFIX,cdninstagram.com,Proxy
 DOMAIN-SUFFIX,instagram.com,Proxy
-
+##
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
 DOMAIN,app.sysdigcloud.com,REJECT
