--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -43,6 +43,8 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 #lemon
 ^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+#163 music
+^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
 
 [Rule]
 #lemon
