--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -45,6 +45,8 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 #163 music
 ^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+#cctvpic
+^http://p1.img.cctvpic.com/fmspic/pd/+.jpg _reject
 
 [Rule]
 #lemon
