--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -46,7 +46,7 @@ Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 
 #163 music
 ^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
 #cctvpic
-^http://p1.img.cctvpic.com/fmspic/pd/+.jpg _reject
+^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
 
 [Rule]
 #lemon
