--- a/File/Surge/zCloud_Global.conf
+++ b/File/Surge/zCloud_Global.conf
@@ -22,24 +22,6 @@ Auto Test Group=url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7
 Cellular Auto Test Group=url-test,80port,url=http://www.gstatic.com/generate_204
 
 [Host]
-se.itunes.apple.com = 42.81.5.81
-su.itunes.apple.com = 42.81.5.81
-upp.itunes.apple.com = 42.81.5.81
-play.itunes.apple.com = 42.81.5.81
-client-api.itunes.apple.com = 42.81.5.81
-itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 42.81.20.29
-init.itunes.apple.com = 184.87.97.50
-search.itunes.apple.com = 184.87.97.50
-radio.itunes.apple.com = 184.87.100.246
-radio-services.itunes.apple.com = 184.87.100.246
-radio-activity.itunes.apple.com = 184.87.100.246
-aod.itunes.apple.com = 117.23.2.78
-mvod.itunes.apple.com = 117.23.2.78
-iosapps.itunes.apple.com = 117.23.2.78
-osxapps.itunes.apple.com = 117.23.2.78
-streamingaudio.itunes.apple.com = 117.23.2.78
-
 api.map.baidu.com = 0.0.0.0
 ps.map.baidu.com = 0.0.0.0
 sv.map.baidu.com = 0.0.0.0
@@ -56,52 +38,82 @@ ulog.imap.baidu.com = ::
 newloc.map.n.shifen.com = ::
 
 [URL Rewrite]
-^http://www.lianbijr.com/adPage/* _reject
+#google
 ^http://www.google.com.* http://www.google.com.hk header
+#lianbi
+^http://www.lianbijr.com/adPage/* _reject
+#youku
+^http://api.mobile.youku.com/adv/* _reject
+^http://home.mobile.youku.com/laout/* _reject
+#iqiyi
+^http://iface.iqiyi.com/api/getNewAdInfo* _reject
+^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
+#sohu
+^http://photocdn.sohu.com/tvmobilemvms/* _reject
+#sina
+^http://dp.im.weibo.cn/entrance _reject
+^http://wbapp.mobile.sina.cn/wbapplua/* _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
+^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+#lemon
+^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+#163 music
+^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+#Cbox
+^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
+^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
 
 [Rule]
-DOMAIN-SUFFIX,githubusercontent.com,DIRECT
-IP-CIDR,101.227.200.11/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,101.227.12.0/23,REJECT,no-resolve
-IP-CIDR,101.227.14.0/24,REJECT,no-resolve
-IP-CIDR,101.227.119.0/24,REJECT,no-resolve
-IP-CIDR,101.227.200.0/24,REJECT,no-resolve
-IP-CIDR,111.63.135.0/24,REJECT,no-resolve
-IP-CIDR,111.206.22.0/24,REJECT,no-resolve
-IP-CIDR,111.206.13.60/30,REJECT,no-resolve
-IP-CIDR,111.206.13.64/28,REJECT,no-resolve
-IP-CIDR,111.206.13.80/32,REJECT,no-resolve
-IP-CIDR,111.206.13.250/31,REJECT,no-resolve
-IP-CIDR,112.17.1.87/32,REJECT,no-resolve
+#lemon
+DOMAIN-SUFFIX,adapi.starschina.com,REJECT
+#youku
+DOMAIN,ad.mobile.youku.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+#iqiyi
+DOMAIN-SUFFIX,qiyi.com,DIRECT
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
+IP-CIDR,112.17.1.75/32,REJECT,no-resolve
+IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
 IP-CIDR,112.17.1.194/32,REJECT,no-resolve
 IP-CIDR,112.17.1.195/32,REJECT,no-resolve
 IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-IP-CIDR,116.206.22.7/32,REJECT,no-resolve
-IP-CIDR,113.207.57.24/32,REJECT,no-resolve
-IP-CIDR,119.188.13.0/24,REJECT,no-resolve
-IP-CIDR,112.17.1.87/32,REJECT,no-resolve
-IP-CIDR,112.17.1.193/32,REJECT,no-resolve
-IP-CIDR,112.17.1.194/32,REJECT,no-resolve
-IP-CIDR,112.17.1.195/32,REJECT,no-resolve
-IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-IP-CIDR,121.251.255.0/24,REJECT,no-resolve
-IP-CIDR,123.125.111.0/24,REJECT,no-resolve
-IP-CIDR,123.125.117.0/24,REJECT,no-resolve
-IP-CIDR,123.125.118.0/24,REJECT,no-resolve
-IP-CIDR,182.254.10.0/24,REJECT,no-resolve
-IP-CIDR,211.137.132.89/32,REJECT,no-resolve
-IP-CIDR,221.179.183.0/24,REJECT,no-resolve
-IP-CIDR,221.179.191.0/24,REJECT,no-resolve
-IP-CIDR,101.227.200.11/32,REJECT,no-resolve
-IP-CIDR,101.227.200.28/32,REJECT,no-resolve
-IP-CIDR,112.17.1.87/32,REJECT,no-resolve
-IP-CIDR,112.17.1.193/32,REJECT,no-resolve
-IP-CIDR,112.17.1.194/32,REJECT,no-resolve
-IP-CIDR,112.17.1.195/32,REJECT,no-resolve
-IP-CIDR,112.17.1.196/32,REJECT,no-resolve
-
+#hunantv
+DOMAIN,x.da.hunantv.com,REJECT
+DOMAIN,y.da.hunantv.com,REJECT
+#qq
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,omgmta.qq.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,tajs.qq.com,REJECT
+DOMAIN,tcss.qq.com,REJECT
+DOMAIN,qqvideo.tc.qq.com,REJECT
+DOMAIN,mi.gdt.qq.com,REJECT
+DOMAIN,v.gdt.qq.com,REJECT
+DOMAIN,cm.l.qq.com,REJECT
+DOMAIN,btrace.video.qq.com,REJECT
+DOMAIN,rcgi.video.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+#sina weibo
+DOMAIN,adshxgc.ut.taobao.com,REJECT
+DOMAIN,biz.weibo.com,REJECT
+DOMAIN,s.alitui.weibo.com,REJECT
+DOMAIN,zymo.mps.weibo.com,REJECT
+DOMAIN,game.weibo.cn,REJECT
+DOMAIN,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN,m.game.weibo.cn,REJECT
+DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
+DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+#sohu
+DOMAIN,mmg.aty.sohu.com,REJECT
+DOMAIN-SUFFIX,aty.sohu.com,REJECT
+##
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
 DOMAIN,app.sysdigcloud.com,REJECT
@@ -471,7 +483,8 @@ DOMAIN-KEYWORD,qtmojo,REJECT
 FINAL,Proxy
 
 [General]
-bypass-tun = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local
-bypass-system = true
+bypass-system = 1
+dns-server = 119.29.29.29, 223.5.5.5, 114.114.114.114
+skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
 loglevel = notify
+allow-wifi-access=true
