--- a/File/Shadowrocket/zCloud_Global.conf
+++ b/File/Shadowrocket/zCloud_Global.conf
@@ -28,10 +28,6 @@ newloc.map.n.shifen.com = ::
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
-#youku by lhie1x
-^http://i-play.mobile.youku.com/common/v5/play? http://1.lhie1x.applinzi.com/Youku.php header
-^http://d.m6.cms.mobile.youku.com/player/domain_name? http://1.lhie1x.applinzi.com/Youku.php header
-^http://1.lhie1x.applinzi.com/common/v5/play http://1.lhie1x.applinzi.com/Youku.php header
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
 ^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
@@ -46,6 +42,11 @@ newloc.map.n.shifen.com = ::
 #lemon
 ^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+#163 music
+^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+#Cbox
+^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
+^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
 
 [Rule]
 #lemon
@@ -54,6 +55,8 @@ DOMAIN-SUFFIX,adapi.starschina.com,REJECT
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,ad.api.3g.youku.com,REJECT
 #iqiyi
+DOMAIN-SUFFIX,qiyi.com,DIRECT
+DOMAIN-SUFFIX,iqiyi.com,DIRECT
 IP-CIDR,112.17.1.75/32,REJECT,no-resolve
 IP-CIDR,112.17.1.76/32,REJECT,no-resolve
 IP-CIDR,112.17.1.193/32,REJECT,no-resolve
@@ -90,16 +93,9 @@ DOMAIN,m.game.weibo.cn,REJECT
 DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
 DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
 DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,sina.cn,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
 #sohu
 DOMAIN,mmg.aty.sohu.com,REJECT
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
-#instagram
-DOMAIN-SUFFIX,cdninstagram.com,Proxy
-DOMAIN-SUFFIX,instagram.com,Proxy
 ##
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
