--- a/File/Shadowrocket/zCloud.conf
+++ b/File/Shadowrocket/zCloud.conf
@@ -6,10 +6,6 @@
 #youku
 ^http://api.mobile.youku.com/adv/* _reject
 ^http://home.mobile.youku.com/laout/* _reject
-#youku by lhie1x
-^http://i-play.mobile.youku.com/common/v5/play? http://1.lhie1x.applinzi.com/Youku.php header
-^http://d.m6.cms.mobile.youku.com/player/domain_name? http://1.lhie1x.applinzi.com/Youku.php header
-^http://1.lhie1x.applinzi.com/common/v5/play http://1.lhie1x.applinzi.com/Youku.php header
 #iqiyi
 ^http://iface.iqiyi.com/api/getNewAdInfo* _reject
 ^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
@@ -20,10 +16,15 @@
 ^http://wbapp.mobile.sina.cn/wbapplua/* _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
 ^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^http://u?([0-9]).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
 ^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+#163 music
+^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+#Cbox
+^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
+^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
 
 [Rule]
 #lemon
@@ -70,13 +71,9 @@ DOMAIN,m.game.weibo.cn,REJECT
 DOMAIN-SUFFIX,gw5.push.mcp.weibo.cn,REJECT
 DOMAIN-SUFFIX,u1.img.mobile.sina.cn,REJECT
 DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
-DOMAIN-SUFFIX,weibo.cn,DIRECT
-DOMAIN-SUFFIX,sina.cn,DIRECT
-DOMAIN-SUFFIX,weibo.com,DIRECT
 #sohu
 DOMAIN,mmg.aty.sohu.com,REJECT
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
-DOMAIN-SUFFIX,sohu.com,DIRECT
 ##
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,cdn-apple.com,DIRECT
