--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -1,6 +1,6 @@
 #!MANAGED-CONFIG https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/zCloud.conf interval=86400 strict=true
 [Proxy]
-小花=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
+Share 1=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
 tokyo 1=custom,153.125.235.146,31607,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 2=custom,153.125.232.142,31633,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 3=custom,153.125.232.179,31044,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
@@ -14,8 +14,8 @@ tokyo 10=custom,153.125.238.174,31537,rc4-md5,zCloud,http://abclite.cn/SSEncrypt
 
 [Proxy Group]
 Proxy = select,Proxy Group, DIRECT
-Proxy Group = select,Auto test Group,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
-Auto test Group = url-test,小花,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
+Proxy Group = select,Auto test Group,Share 1,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
+Auto test Group = url-test,Share 1,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
 [URL Rewrite]
 #google
