--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -1,21 +1,22 @@
 #!MANAGED-CONFIG https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/zCloud.conf interval=86400 strict=true
 [Proxy]
-Share 1=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
-tokyo 1=custom,153.125.235.146,31607,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
+xiaohua=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
+zaihua=custom,47.91.159.153,2333,aes-128-ctr,zaihua2,http://abclite.cn/SSEncrypt.module
+tokyo 1=custom,153.125.235.147,31134,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 2=custom,153.125.232.142,31633,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 3=custom,153.125.232.179,31044,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
-tokyo 4=custom,153.125.233.240,31581,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
+tokyo 4=custom,153.125.233.242,31626,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 5=custom,153.125.235.241,31240,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 6=custom,153.125.234.240,31709,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 7=custom,153.125.235.238,31936,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 8=custom,153.125.235.141,31716,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
-tokyo 9=custom,153.125.233.240,31134,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
-tokyo 10=custom,153.125.238.174,31537,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
+tokyo 9=custom,153.125.233.239,31144,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
+tokyo 10=custom,153.125.238.177,31194,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 
 [Proxy Group]
 Proxy = select,Proxy Group, DIRECT
-Proxy Group = select,Auto test Group,Share 1,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
-Auto test Group = url-test,Share 1,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
+Proxy Group = select,Auto test Group,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
+Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
 [URL Rewrite]
 #google
