--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -20,31 +20,42 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 
 [URL Rewrite]
 #google
-^http://www.google.com.* http://www.google.com.hk header
+^.+google.com.* http://www.google.com.hk header
 #lianbi
-^http://www.lianbijr.com/adPage/* _reject
+^.+www.lianbijr.com/adPage/* _reject
 #youku
-^http://api.mobile.youku.com/adv/* _reject
-^http://home.mobile.youku.com/laout/* _reject
+^.+api.mobile.youku.com/adv/* _reject
+^.+home.mobile.youku.com/laout/* _reject
+#Youku by lhie1
+^.+api.appsdk.soku.com/bg/r _reject
+^.+api.appsdk.soku.com/tag/r _reject
+^.+api.mobile.youku.com/adv/ _reject
+^.+api.mobile.youku.com/layout/search/hot/word _reject
+^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
+^.+hd.api.mobile.youku.com/common/v3/hudong/new _reject
+^.+hd.mobile.youku.com/common/v3/hudong/new _reject
+^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
+^.+m.youku.com/video/libs/iwt.js _reject
+^.+r.l.youku.com/rec_at_click _reject
 #iqiyi
-^http://iface.iqiyi.com/api/getNewAdInfo* _reject
-^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
+^.+iface.iqiyi.com/api/getNewAdInfo* _reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
 #sohu
-^http://photocdn.sohu.com/tvmobilemvms/* _reject
+^.+photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
-^http://dp.im.weibo.cn/entrance _reject
-^http://wbapp.mobile.sina.cn/wbapplua/* _reject
-^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
-^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^.+dp.im.weibo.cn/entrance _reject
+^.+wbapp.mobile.sina.cn/wbapplua/* _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
-^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
-^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 #163 music
-^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+^.+p3.music.126.net/+/(\d).jpg?res=(\d) _reject
 #Cbox
-^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
-^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
+^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
+^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
 
 [Rule]
 #lemon
