--- a/File/Surge/zCloud_test.conf
+++ b/File/Surge/zCloud_test.conf
@@ -19,16 +19,8 @@ Proxy Group = select,Auto test Group,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,toky
 Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url = http://www.gstatic.com/generate_204
 
 [URL Rewrite]
-#google
-^.+google.com.* http://www.google.com.hk header
-#lianbi
-^.+www.lianbijr.com/adPage/* _reject
-#youku
-^.+api.mobile.youku.com/adv/* _reject
-^.+home.mobile.youku.com/laout/* _reject
 #Youku by lhie1
-^.+api.appsdk.soku.com/bg/r _reject
-^.+api.appsdk.soku.com/tag/r _reject
+^.+api.appsdk.soku.com/[bg|tag]/r _reject
 ^.+api.mobile.youku.com/adv/ _reject
 ^.+api.mobile.youku.com/layout/search/hot/word _reject
 ^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
@@ -37,6 +29,13 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
 ^.+m.youku.com/video/libs/iwt.js _reject
 ^.+r.l.youku.com/rec_at_click _reject
+#youku
+^.+api.mobile.youku.com/adv/* _reject
+^.+home.mobile.youku.com/laout/* _reject
+#google
+^.+google.com.* http://www.google.com.hk header
+#lianbi
+^.+www.lianbijr.com/adPage/* _reject
 #iqiyi
 ^.+iface.iqiyi.com/api/getNewAdInfo* _reject
 ^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
@@ -52,24 +51,15 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
 ^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 #163 music
-^.+p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
+^.+img1.126.net/channel8/.+ _reject
 #Cbox
 ^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
 ^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
+#Mybus
+^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
 
 [Rule]
-#Instagram
-PROCESS-NAME,Instagram,Proxy
-#Telegram
-PROCESS-NAME,Telegram,Proxy
-#Twitter
-PROCESS-NAME,Twitter,Proxy
-#Facebook
-PROCESS-NAME,Facebook,Proxy
-#Youtube
-PROCESS-NAME,Youtube,Proxy
-#JOOX
-PROCESS-NAME,JOOX,Proxy
 #lemon
 DOMAIN-SUFFIX,adapi.starschina.com,REJECT
 #youku
@@ -147,7 +137,18 @@ IP-CIDR,192.168.0.0/16,DIRECT
 GEOIP,CN,DIRECT
 FINAL,Proxy
 
+
 [Host]
+#apple
+aod.itunes.apple.com = hkg.aapldns.xyz
+aodp.itunes.apple.com = hkg.aapldns.xyz
+appldnld.apple.com = hkg.aapldns.xyz
+iosapps.itunes.apple.com = hkg.aapldns.xyz
+itsliveradio.apple.com = 42.99.128.168
+osxapps.itunes.apple.com = hkg.aapldns.xyz
+streamingaudio.itunes.apple.com = hkg.aapldns.xyz
+swcdn.apple.com = hkg.aapldns.xyz
+#baidu map nop
 api.map.baidu.com = 0.0.0.0
 ps.map.baidu.com = 0.0.0.0
 sv.map.baidu.com = 0.0.0.0
