--- a/File/Surge/zCloud_test.conf
+++ b/File/Surge/zCloud_test.conf
@@ -60,6 +60,18 @@ Auto test Group = url-test,xiaohua,zaihua,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 
 ^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
 
 [Rule]
+#process proxy
+PROCESS-NAME,Spotify,Proxy
+PROCESS-NAME,Dropbox,Proxy
+PROCESS-NAME,Pinterest,Proxy
+PROCESS-NAME,Flickr,Proxy
+PROCESS-NAME,VSCO,Proxy
+PROCESS-NAME,Instagram,Proxy
+PROCESS-NAME,Telegram,Proxy
+PROCESS-NAME,Twitter,Proxy
+PROCESS-NAME,Facebook,Proxy
+PROCESS-NAME,Youtube,Proxy
+PROCESS-NAME,JOOX,Proxy
 #lemon
 DOMAIN-SUFFIX,adapi.starschina.com,REJECT
 #youku
@@ -129,6 +141,18 @@ DOMAIN,badad.googleplex.com,REJECT
 DOMAIN,www.googlecommerce.com,REJECT
 DOMAIN,www.googletagmanager.com,REJECT
 DOMAIN,fonts.googleapis.com,REJECT
+#process proxy
+PROCESS-NAME,Spotify,Proxy
+PROCESS-NAME,Dropbox,Proxy
+PROCESS-NAME,Pinterest,Proxy
+PROCESS-NAME,Flickr,Proxy
+PROCESS-NAME,VSCO,Proxy
+PROCESS-NAME,Instagram,Proxy
+PROCESS-NAME,Telegram,Proxy
+PROCESS-NAME,Twitter,Proxy
+PROCESS-NAME,Facebook,Proxy
+PROCESS-NAME,Youtube,Proxy
+PROCESS-NAME,JOOX,Proxy
 ##
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
