--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -4086,6 +4086,19 @@ DOMAIN-KEYWORD,ttvnw,Proxy,force-remote-dns
 DOMAIN-KEYWORD,dropbox,Proxy,force-remote-dns
 DOMAIN-KEYWORD,telegram,Proxy,force-remote-dns
 DOMAIN-KEYWORD,spotify,Proxy,force-remote-dns
+#process proxy
+PROCESS-NAME,Spotify,Proxy
+PROCESS-NAME,Dropbox,Proxy
+PROCESS-NAME,Pinterest,Proxy
+PROCESS-NAME,Flickr,Proxy
+PROCESS-NAME,VSCO,Proxy
+PROCESS-NAME,Instagram,Proxy
+PROCESS-NAME,Telegram,Proxy
+PROCESS-NAME,Twitter,Proxy
+PROCESS-NAME,Facebook,Proxy
+PROCESS-NAME,Youtube,Proxy
+PROCESS-NAME,JOOX,Proxy
+##
 IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.0.0.0/8,DIRECT
