--- a/File/Surge/zCloud.conf
+++ b/File/Surge/zCloud.conf
@@ -1,7 +1,7 @@
 #!MANAGED-CONFIG https://raw.githubusercontent.com/Brywmzl/Conf/master/File/Surge/zCloud.conf interval=86400 strict=true
 [Proxy]
 xiaohua=custom,64.137.194.217,53195,chacha20,5201314,http://abclite.cn/SSEncrypt.module
-zaihua=custom,47.91.159.153,2333,aes-128-ctr,zaihua2,http://abclite.cn/SSEncrypt.module
+zaihua=custom,47.91.159.153,2333,chacha20,zaihua2,http://abclite.cn/SSEncrypt.module
 tokyo 1=custom,153.125.235.147,31134,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 2=custom,153.125.232.142,31633,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 3=custom,153.125.232.179,31044,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
