--- a/File/Surge/zCloud_Global.conf
+++ b/File/Surge/zCloud_Global.conf
@@ -11,31 +11,15 @@ tokyo 8=custom,153.125.232.148,31732,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.
 tokyo 9=custom,153.125.232.148,31622,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 tokyo 10=custom,153.125.232.180,31465,rc4-md5,zCloud,http://abclite.cn/SSEncrypt.module
 
-80port=custom,127.0.0.1,80,chacha20,zCloud,http://abclite.cn/SSEncrypt.module
+zaihua 53=custom,47.91.159.153,53,chacha20,zaihua6,http://abclite.cn/SSEncrypt.module
 
 [Proxy Group]
 Proxy=select,Proxy Group,Cellular Group,SSID Group,DIRECT
 Proxy Group=select,Auto Test Group,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10
-Cellular Group=select, Cellular Auto Test Group,80port
+Cellular Group=select, Cellular Auto Test Group,zaihua 53
 SSID Group=ssid,default = Proxy Group,cellular=Cellular Group
 Auto Test Group=url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7,tokyo 8,tokyo 9,tokyo 10,url=http://www.gstatic.com/generate_204
-Cellular Auto Test Group=url-test,80port,url=http://www.gstatic.com/generate_204
-
-[Host]
-api.map.baidu.com = 0.0.0.0
-ps.map.baidu.com = 0.0.0.0
-sv.map.baidu.com = 0.0.0.0
-offnavi.map.baidu.com = 0.0.0.0
-newvector.map.baidu.com = 0.0.0.0
-ulog.imap.baidu.com = 0.0.0.0
-newloc.map.n.shifen.com = 0.0.0.0
-api.map.baidu.com = ::
-ps.map.baidu.com = ::
-sv.map.baidu.com = ::
-offnavi.map.baidu.com = ::
-newvector.map.baidu.com = ::
-ulog.imap.baidu.com = ::
-newloc.map.n.shifen.com = ::
+Cellular Auto Test Group=url-test,zaihua 53,url=http://www.gstatic.com/generate_204
 
 [URL Rewrite]
 #google
@@ -64,6 +48,47 @@ newloc.map.n.shifen.com = ::
 #Cbox
 ^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
 ^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
+
+[URL Rewrite]
+#Youku by lhie1
+^.+api.appsdk.soku.com/[bg|tag]/r _reject
+^.+api.mobile.youku.com/adv/ _reject
+^.+api.mobile.youku.com/layout/search/hot/word _reject
+^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
+^.+hd.api.mobile.youku.com/common/v3/hudong/new _reject
+^.+hd.mobile.youku.com/common/v3/hudong/new _reject
+^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
+^.+m.youku.com/video/libs/iwt.js _reject
+^.+r.l.youku.com/rec_at_click _reject
+#youku
+^.+api.mobile.youku.com/adv/* _reject
+^.+home.mobile.youku.com/laout/* _reject
+#google
+^.+google.com.* http://www.google.com.hk header
+#lianbi
+^.+www.lianbijr.com/adPage/* _reject
+#iqiyi
+^.+iface.iqiyi.com/api/getNewAdInfo* _reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
+#sohu
+^.+photocdn.sohu.com/tvmobilemvms/* _reject
+#sina
+^.+dp.im.weibo.cn/entrance _reject
+^.+wbapp.mobile.sina.cn/wbapplua/* _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
+#lemon
+^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+#163 music
+^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
+^.+img1.126.net/channel8/.+ _reject
+#Cbox
+^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
+^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
+#Mybus
+^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
 
 [Rule]
 #lemon
@@ -481,6 +506,22 @@ DOMAIN-KEYWORD,openx,REJECT
 DOMAIN-KEYWORD,admob,REJECT
 DOMAIN-KEYWORD,qtmojo,REJECT
 FINAL,Proxy
+
+[Host]
+api.map.baidu.com = 0.0.0.0
+ps.map.baidu.com = 0.0.0.0
+sv.map.baidu.com = 0.0.0.0
+offnavi.map.baidu.com = 0.0.0.0
+newvector.map.baidu.com = 0.0.0.0
+ulog.imap.baidu.com = 0.0.0.0
+newloc.map.n.shifen.com = 0.0.0.0
+api.map.baidu.com = ::
+ps.map.baidu.com = ::
+sv.map.baidu.com = ::
+offnavi.map.baidu.com = ::
+newvector.map.baidu.com = ::
+ulog.imap.baidu.com = ::
+newloc.map.n.shifen.com = ::
 
 [General]
 bypass-system = 1
