--- a/File/Surge/zCloud_Global.conf
+++ b/File/Surge/zCloud_Global.conf
@@ -22,32 +22,45 @@ Auto Test Group=url-test,tokyo 1,tokyo 2,tokyo 3,tokyo 4,tokyo 5,tokyo 6,tokyo 7
 Cellular Auto Test Group=url-test,zaihua 53,url=http://www.gstatic.com/generate_204
 
 [URL Rewrite]
-#google
-^http://www.google.com.* http://www.google.com.hk header
-#lianbi
-^http://www.lianbijr.com/adPage/* _reject
+#Youku by lhie1
+^.+api.appsdk.soku.com/[bg|tag]/r _reject
+^.+api.mobile.youku.com/adv/ _reject
+^.+api.mobile.youku.com/layout/search/hot/word _reject
+^.+d.m6.cms.mobile.youku.com/player/domain_name? http://burpsuite.applinzi.com/Request/ header
+^.+hd.api.mobile.youku.com/common/v3/hudong/new _reject
+^.+hd.mobile.youku.com/common/v3/hudong/new _reject
+^.+i-play.mobile.youku.com/common/v5/play? http://burpsuite.applinzi.com/Request/ header
+^.+m.youku.com/video/libs/iwt.js _reject
+^.+r.l.youku.com/rec_at_click _reject
 #youku
-^http://api.mobile.youku.com/adv/* _reject
-^http://home.mobile.youku.com/laout/* _reject
+^.+api.mobile.youku.com/adv/* _reject
+^.+home.mobile.youku.com/laout/* _reject
+#google
+^.+google.com.* http://www.google.com.hk header
+#lianbi
+^.+www.lianbijr.com/adPage/* _reject
 #iqiyi
-^http://iface.iqiyi.com/api/getNewAdInfo* _reject
-^http://pic?(\d{1}).qiyipic.com/common/?(\d{8})/?([a-z0-9]{32}).jpg _reject
+^.+iface.iqiyi.com/api/getNewAdInfo* _reject
+^.+pic?\d{1}.qiyipic.com/common/?\d{8}/?([a-z0-9]{32}).jpg _reject
 #sohu
-^http://photocdn.sohu.com/tvmobilemvms/* _reject
+^.+photocdn.sohu.com/tvmobilemvms/* _reject
 #sina
-^http://dp.im.weibo.cn/entrance _reject
-^http://wbapp.mobile.sina.cn/wbapplua/* _reject
-^http://sdkapp.mobile.sina.cn/interface/sdk/sdkad.php _reject
-^http://sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
-^http://u?(\d).img.mobile.sina.cn/public/files/image/750x120_img* _reject
+^.+dp.im.weibo.cn/entrance _reject
+^.+wbapp.mobile.sina.cn/wbapplua/* _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/[sdkad.php|actionad.php] _reject
+^.+sdkapp.mobile.sina.cn/interface/sdk/actionad.php _reject
+^.+u?\d{1}.img.mobile.sina.cn/public/files/image/750x120_img* _reject
 #lemon
-^http://api.lemon95.com/V2/Media/Users/GetChannel* _reject
-^http://tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
+^.+api.lemon95.com/V2/Media/Users/GetChannel* _reject
+^.+tupian.lemon95.com:(\d{3,5})/Pictures/VediosAD/* _reject
 #163 music
-^http://p3.music.126.net/+/(\d).jpg?res=(\d) _reject
+^.+p[3|4].music.126.net/+/\d.jpg?res=\d{8} _reject
+^.+img1.126.net/channel8/.+ _reject
 #Cbox
-^http://p1.img.cctvpic.com/fmspic/pd/+ _reject
-^http://www.cntv.cn/nettv/adp/online/adlist_ios.js _reject
+^.+p1.img.cctvpic.com/fmspic/pd/+ _reject
+^.+cntv.cn/nettv/adp/online/adlist_ios.js _reject
+#Mybus
+^.+\d{4}.mygolbs.com:\d{4}/imgs/\d{13}.png _reject
 
 [URL Rewrite]
 #Youku by lhie1
@@ -138,6 +151,24 @@ DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
 #sohu
 DOMAIN,mmg.aty.sohu.com,REJECT
 DOMAIN-SUFFIX,aty.sohu.com,REJECT
+#youtube by lhie1
+DOMAIN-SUFFIX,ehg-youtube.hitbox.com,REJECT
+DOMAIN-SUFFIX,gcdn.2mdn.net,REJECT
+DOMAIN-SUFFIX,s.youtube.com,REJECT
+DOMAIN-SUFFIX,s2.youtube.com,REJECT
+DOMAIN-SUFFIX,ssl-youtube.2cnt.net,REJECT
+DOMAIN-SUFFIX,youtube.112.2o7.net,REJECT
+DOMAIN-SUFFIX,youtube.2cnt.net,REJECT
+DOMAIN-SUFFIX,ads.youtube.com,REJECT
+DOMAIN-SUFFIX,azabu-u.ac.jp,REJECT
+DOMAIN-SUFFIX,couchcoaster.jp,REJECT
+DOMAIN-SUFFIX,crt.comodoca.com,REJECT
+DOMAIN-SUFFIX,delivery.dmkt-sp.jp,REJECT
+DOMAIN-SUFFIX,files.adform.net,REJECT
+DOMAIN-SUFFIX,m-78.jp,REJECT
+DOMAIN-SUFFIX,nichibenren.or.jp,REJECT
+DOMAIN-SUFFIX,nicorette.co.kr,REJECT
+DOMAIN-SUFFIX,shizen-no-megumi.com,REJECT
 ##
 DOMAIN,alexa.links.cn,REJECT
 DOMAIN,api.amplitude.com,REJECT
